WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284809
REGRESSION(
287916@main
): [Win] stack overflow in JSString::resolveToBuffer
https://bugs.webkit.org/show_bug.cgi?id=284809
Summary
REGRESSION(287916@main): [Win] stack overflow in JSString::resolveToBuffer
Fujii Hironori
Reported
2024-12-17 03:27:21 PST
After
287916@main
, 8 tests are crashing for Windows port.
https://build.webkit.org/#/builders/1191/builds/1906
Regressions: Unexpected crashes (8) fast/css/shadow-box-recursion-depth.html [ Crash ] fast/forms/input-implicit-length-limit.html [ Crash ] fast/forms/input-maxlength.html [ Crash ] js/dom/JSON-parse-complex.html [ Crash ] js/dom/JSON-parse.html [ Crash ] js/dom/JSON-stringify.html [ Crash ] js/excessive-comma-usage.html [ Crash ] js/stack-overflow-regexp.html [ Crash ]
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-12-17 03:32:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38067
EWS
Comment 2
2024-12-17 11:34:23 PST
Committed
287956@main
(10fc803b9314): <
https://commits.webkit.org/287956@main
> Reviewed commits have been landed. Closing PR #38067 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-17 11:35:18 PST
<
rdar://problem/141630556
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug