REGRESSION(287916@main): stack overflow in JSString::resolveToBuffer https://bugs.webkit.org/show_bug.cgi?id=284809

Reviewed by Yusuke Suzuki.

After <https://commits.webkit.org/287916@main> removed the stack
height check for JSString::resolveToBuffer, some tests were crashing
for Windows port. Windows and PowerPC doesn't support
[[clang::musttail]].

Use resolveToBufferSlow instead for the platforms. Added
HAVE_MUST_TAIL_CALL macro.

* Source/JavaScriptCore/runtime/JSStringInlines.h:
(JSC::JSRopeString::resolveToBuffer):
* Source/WTF/wtf/Compiler.h:

Canonical link: https://commits.webkit.org/287956@main